<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/grey"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_7"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_9"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_div"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_mul"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_sub"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_dot"
            android:layout_margin="2dp"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_0"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_clr"
            android:layout_margin="2dp"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnAddition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_add"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_eql"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml"
            />
    </LinearLayout>

</LinearLayout>